--- a/program/templates/program/pdf_page.html
+++ b/program/templates/program/pdf_page.html
@@ -70,7 +70,7 @@
         {% for program in program_filter.qs %}
         <tbody>
           <tr>
-            <td>{{program.title}}</th>
+            <td><a href="{% url 'program:details' program.prog_id %}" class="link">{{program.title}}</a></th>
             <td>{{program.status}}</th>
             <td>{{program.impl_agency}}</th>
 
