--- a/team/templates/team/pdf_page.html
+++ b/team/templates/team/pdf_page.html
@@ -74,7 +74,7 @@
         {% for team in team_filter.qs %}
         <tbody>
           <tr>
-            <td>{{team.fname}} {{team.lname}}</th>
+            <td><a href="{% url 'team:details' team.member_id %}" class="link">{{team.fname}} {{team.lname}}</a></th>
             <td>{{team.position}}</th>
             <td>{{team.teams}}</th>
 
