--- a/sub/templates/sub/audit_trail.html
+++ b/sub/templates/sub/audit_trail.html
@@ -48,7 +48,7 @@
                     {% if log.action == 0 %} created{% endif %}
                 
                 
-                    {{log.object_repr}} {% if log.action == 1 %}{{log.changes_str}}{% endif %} on
+                    {{log.object_repr}} {% if log.action == 1 %}{{log.changes_str}}{% endif %} at
                 
                 
                     {{log.timestamp}}
