--- a/program/templates/program/details.html
+++ b/program/templates/program/details.html
@@ -3,6 +3,7 @@
 
     <head>
         {% load static %}
+        {% load humanize %}
         <meta charset="UTF-8">
         <link rel="stylesheet" href="{% static 'css/detail.css' %}">
         <link rel="stylesheet" href="{% static 'bootstrap/bootstrap.min.css' %}">
@@ -85,10 +86,15 @@
                           <td>{{program.final_impl_date}}</td>
                       </tr>
                       
-                      <tr>{% if program.total_budget %}
+                      <tr>
                           <th>Total Budget: </th>
-                          <td>P{{program.total_budget}}</td>
-                          {%else%}{% endif %}
+                          <td>
+                            {% for program in budget %}
+                            Php {{program.total|escape|floatformat:2|intcomma}}<br>
+                            {% empty %}
+                            None
+                            {% endfor %}
+                          </td>
                       </tr>
 
                       <tr>{% if program.daterequestedext %}
@@ -135,7 +141,7 @@
                       {% endif %}
                   </table>
                   
-                  {% if user.is_superuser or user.secretariat or user.researcher %}
+                  {% if user.is_superuser or user.secretariat or request.user == program.created_by %}
                       <a href="{% url 'program:edit' program.prog_id %}" class="btn btn-success">Edit</a>
                       <a href="{% url 'program:delete' program.prog_id %}" class="btn btn-danger">Delete</a>
                   {% endif %}
