--- a/project/templates/project/pdf_page.html
+++ b/project/templates/project/pdf_page.html
@@ -43,8 +43,8 @@
             {% render_field project_filter.form.status class="form-control" %}
           </div>
           <div class="form-group col-sm-4 col-md-3">
-            {{ project_filter.form.fund_agency.label_tag }}
-            {% render_field project_filter.form.fund_agency class="form-control" %}
+            {{ project_filter.form.impl_agency.label_tag }}
+            {% render_field project_filter.form.impl_agency class="form-control" %}
           </div>
           <div class="form-group col-sm-4 col-md-3">
             {{ project_filter.form.title.label_tag }}
