--- a/static/css/secretariat.css
+++ b/static/css/secretariat.css
@@ -67,13 +67,29 @@ body {
     color: rgb(29, 29, 29);
 }
 
+.org_chart{
+    color: #ffffff;
+    text-decoration: none;
+    float: right;
+    margin-right: 13.5px;
+    position: relative;
+    background-color: #66b366;
+    margin-top: 5px;
+    padding: 2px 5px;
+    font-weight: 600;
+}
+
+.org_chart:hover{
+    background-color: #339933;
+}
+
 h2{
     padding-top: 20px;
     text-align: center;
     font-family: Poppins;
 }
 
-.center img{
+.modal-content .center img{
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -81,13 +97,12 @@ h2{
 }
 
 .wrapper{
-    display: none;
     /* margin: 80px auto; */
     padding: 20px 0;
     padding-bottom: 10px;
     text-transform: capitalize;
     font-family: Poppins;
-    background-color: #66b366;
+    /* background-color: #ffffff; */
 }
 
 .wrapper h1{
@@ -124,7 +139,7 @@ h2{
     padding-bottom: 18px;
     text-align: center;
     background:#f0f4ee;
-    border: 2px solid #008000;
+    border: 1px solid #24242416;
     display: flex;
     flex-direction: column;
 }
