--- a/sub/templates/sub/detail_iec.html
+++ b/sub/templates/sub/detail_iec.html
@@ -57,7 +57,7 @@
                         <tr>
                             {% if iecmaterial.iec_file %}
                             <th>IEC File: </th>
-                            <td><a href="{{ iecmaterial.iec_file.url }}" target="_blank">Download File</a></td>
+                            <td><a href="{{ iecmaterial.iec_file.url }}" target="_blank">View File</a></td>
                             {% endif %}
                         </tr>
 
