--- a/sub/templates/sub/tbl_iec.html
+++ b/sub/templates/sub/tbl_iec.html
@@ -54,8 +54,10 @@
 
 				<td>
 					<a href="{% url 'sub:detail_iecmaterial' iecmaterial.title %}" class="btn btn-primary">View</a>&nbsp;
+					{% if user.is_superuser or user.secretariat or request.user == iecmaterial.created_by %}
 					<a href="{% url 'sub:edit_iecmaterial' iecmaterial.title %}" class="btn btn-success">Edit</a>&nbsp;
-					<a href="{% url 'sub:delete_iecmaterial' iecmaterial.title %}" class="btn btn-danger">Delete</a>
+					<a href="{% url 'sub:delete_iecmaterial' iecmaterial.title %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this?')">Delete</a>
+					{% endif %}
 				</td>
 			  
 			  </tr>
