--- a/sub/templates/sub/tbl_priorityarea.html
+++ b/sub/templates/sub/tbl_priorityarea.html
@@ -47,8 +47,10 @@
 
 				<td>
 					<a href="{% url 'sub:detail_prioarea' priorityarea.priority_id %}" class="btn btn-primary">View</a>&nbsp;
+					{% if user.is_superuser or user.secretariat or request.user == priorityarea.created_by %}
 					<a href="{% url 'sub:edit_prioarea' priorityarea.priority_id  %}" class="btn btn-success">Edit</a>&nbsp;
-					<a href="{% url 'sub:delete_prioarea' priorityarea.priority_id  %}" class="btn btn-danger">Delete</a>
+					<a href="{% url 'sub:delete_prioarea' priorityarea.priority_id  %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this?')">Delete</a>
+					{% endif %}
 				</td>
 
 			  </tr>
