--- a/sub/templates/sub/tbl_stakeholder.html
+++ b/sub/templates/sub/tbl_stakeholder.html
@@ -54,8 +54,10 @@
 
 				<td>
 					<a href="{% url 'sub:detail_stakeholder' stakeholder.stakeholder_id %}" class="btn btn-primary">View</a>&nbsp;
+					{% if user.is_superuser or user.secretariat or request.user == stakeholder.created_by %}
 					<a href="{% url 'sub:edit_stakeholder' stakeholder.stakeholder_id %}" class="btn btn-success">Edit</a>&nbsp;
-					<a href="{% url 'sub:delete_stakeholder' stakeholder.stakeholder_id %}" class="btn btn-danger">Delete</a>
+					<a href="{% url 'sub:delete_stakeholder' stakeholder.stakeholder_id %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this?')">Delete</a>
+					{% endif %}
 				</td>
 
 			  </tr>
