--- a/secretariat/templates/secretariat/report.html
+++ b/secretariat/templates/secretariat/report.html
@@ -31,6 +31,9 @@
     </style>
 </head>
 <body>
+
+    <img src="static/images/letterhead.PNG" alt="letterhead" style="width: 650px; height: 100px; top: -330px;"><br>
+
         {% if secretariat.photo %}
         <br>
         <img src="{{ secretariat.photo.path }}" alt="img_commodity" style="width: 100px; height: 100px;"><br><br>
