--- a/commodity/templates/commodity/report.html
+++ b/commodity/templates/commodity/report.html
@@ -34,7 +34,7 @@
     <!-- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <h2>COMMODITIES</h2> -->
 
-
+        <img src="static/images/letterhead.PNG" alt="letterhead" style="width: 650px; height: 100px;"><br>
         <br>
         <img src="{{ commodity.img.path }}" alt="img_commodity" style="width: 240px; height: 240px;"><br><br>
 
