--- a/consortium/templates/consortium/report.html
+++ b/consortium/templates/consortium/report.html
@@ -26,6 +26,8 @@
     </style>
 </head>
 <body>
+      <img src="static/images/letterhead.PNG" alt="letterhead" style="width: 650px; height: 100px;"><br><br>
+
         <img height="90px" width="90px" src="{{ cmi.logo.path }}" alt="img_cmi"><br><br>
 
         <!-- <label>CMI:</label> -->
@@ -56,6 +58,8 @@
         {{cmi.email}}<br>
 
       <pdf:nextpage>
+
+      <img src="static/images/letterhead.PNG" alt="letterhead" style="width: 650px; height: 100px;"><br>
         <br>
         {{cmi.name}} ({{cmi.agency_code}})<br><br>
         <table width="100%">
