--- a/program/templates/program/report.html
+++ b/program/templates/program/report.html
@@ -32,7 +32,8 @@
 </head>
 <body>
 
-        <br>
+  <img src="static/images/letterhead.PNG" alt="letterhead" style="width: 650px; height: 100px;"><br>
+        <br><br>
 
         <!-- <label>Title:</label> -->
         <h3>{{program.title}}</h3><br>
@@ -106,7 +107,9 @@
         <label>Date Uploaded:</label>
         {{program.date_uploaded}}<br><br>
 
-    <pdf:nextpage><br>
+    <pdf:nextpage>
+      <img src="static/images/letterhead.PNG" alt="letterhead" style="width: 650px; height: 100px;"><br>
+    <br><br>
         <h3>{{program.title}}</h3><br>
 
         <table width="100%">
