--- a/project/templates/project/report.html
+++ b/project/templates/project/report.html
@@ -39,7 +39,9 @@
     
         <pdf:nextpage> -->
 
-        <br>
+        <img src="static/images/letterhead.PNG" alt="letterhead" style="width: 650px; height: 100px;"><br>
+
+        <br><br>
 
             <!-- <label></label><br> -->
             <h3>{{project.title}}</h3><br>
@@ -153,8 +155,10 @@
             {{project.date_uploaded}}
 
 
-            <pdf:nextpage><br>
-            {{project.title}}<br>
+            <pdf:nextpage>
+              <img src="static/images/letterhead.PNG" alt="letterhead" style="width: 650px; height: 100px;"><br>
+            <br><br>
+            <h3>{{project.title}}</h3><br>
     
             <table width="100%">
               <tr>
