--- a/static/css/secretariat.css
+++ b/static/css/secretariat.css
@@ -76,7 +76,8 @@ body {
     background-color: #66b366;
     margin-top: 5px;
     padding: 2px 5px;
-    font-weight: 600;
+    font-weight: 500;
+    font-family: Poppins;
 }
 
 .org_chart:hover{
@@ -93,7 +94,7 @@ h2{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 75%;
+    width: 77%;
 }
 
 .wrapper{
