--- a/team/templates/team/pdf_page.html
+++ b/team/templates/team/pdf_page.html
@@ -20,7 +20,7 @@
 
     <table id="head">
         <tr>
-          <th class="title">TEAMS</th>
+          <th class="title">CLUSTER</th>
           {% if user.is_authenticated %}
           <th class="main"><a href="{% url 'team:team' %}">Main Page</a>
           {% endif %}
