--- a/secretariat/templates/secretariat/index.html
+++ b/secretariat/templates/secretariat/index.html
@@ -25,6 +25,8 @@
 			  overflow: auto; 
 			  background-color: rgb(0,0,0);
 			  background-color: rgba(0,0,0,0.4);
+			  padding-left: 110px;
+			  padding-right: 110px;
 			}
 			
 			.modal-content {
@@ -41,6 +43,8 @@
 			  float: right;
 			  font-size: 28px;
 			  font-weight: bold;
+			  position: absolute;
+			  right: 15px;
 			}
 			
 			.close:hover,
