--- a/sub/templates/sub/tbl_programbudget.html
+++ b/sub/templates/sub/tbl_programbudget.html
@@ -4,6 +4,7 @@
     <head>
 		{% load static %}
 		{% load crispy_forms_tags %}
+		{% load humanize %}
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="{% static 'css/progbudg.css' %}">
 		<link rel="stylesheet" href="{% static 'bootstrap/bootstrap.min.css' %}">
@@ -51,7 +52,7 @@
 				<td>{{progbudg.yr}}</td>
 				<td>{{progbudg.fund_source}}</td> 
 				{% if progbudg.total %}
-				<td>Php {{progbudg.total|floatformat:2}}</td>
+				<td>Php {{progbudg.total|floatformat:2|intcomma}}</td>
 				{% else %}
 				<td>None</td>
 				{% endif %}
