--- a/secretariat/templates/secretariat/index.html
+++ b/secretariat/templates/secretariat/index.html
@@ -54,6 +54,13 @@
 			  cursor: pointer;
 			}
 	  
+			@media (max-width: 800px) {
+			.modal {
+			  padding-left: 20px;
+			  padding-right: 20px;
+			}
+		  }
+
 			@media (max-width: 500px) {
 			.modal-content {
 			  color: #008000;
@@ -61,6 +68,10 @@
 			  margin: auto;
 			  padding: 10px;
 			  width: 90%;
+			}
+			.modal {
+			  padding-left: 20px;
+			  padding-right: 20px;
 			}
 		  }
 			</style>
