--- a/static/css/secretariat.css
+++ b/static/css/secretariat.css
@@ -216,7 +216,18 @@ h2{
         font-size: 10px;
         cursor: pointer;
     }
-
+    .modal-content .center img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+    }
+    .wrapper h2{
+        margin-top: 4px;
+    }
+    .org_chart{
+        font-size: 12px;
+    }
 }
 
 @media (max-width: 500px) {
@@ -282,4 +293,30 @@ h2{
         margin-left: auto;
         margin-right: auto;
     }
+    .org_chart{
+        color: #ffffff;
+        text-decoration: none;
+        float: right;
+        margin-right: 13.5px;
+        position: relative;
+        background-color: #66b366;
+        margin-top: 5px;
+        padding: 2px 5px;
+        font-weight: 500;
+        font-family: Poppins;
+        font-size: 10px;
+    }
+    .wrapper h2{
+        margin-top: 2px;
+    }
+    .modal-content .center img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+    }
+    .modal-content h2{
+        font-size: 14px;
+    }
+
 }
