--- a/secretariat/templates/secretariat/index.html
+++ b/secretariat/templates/secretariat/index.html
@@ -91,7 +91,7 @@
 			</tr>
 		  </table>
 
-		  <a href="#" id="myBtn" class="org_chart">View Organization Chart</a>
+		  <a href="#" id="myBtn" class="org_chart">View Organizational Chart</a>
 
 
 		  <div class="wrapper">
